@@ -35,5 +35,6 @@
 - qc_verify_bam_id
 - qc_upstream_tags
 - run_analysis_complete
+- update_ml_warehouse
 - archive_to_irods
 - run_qc_review_pending
