@@ -57,13 +57,13 @@ use_ok('npg_pipeline::pluggable::harold::post_qc_review');
   my $unset_string = 'unset NPG_WEBSERVICE_CACHE_DIR; unset NPG_CACHED_SAMPLESHEET_FILE;';
   my $expected = q[bsub -q lowload 50 -J warehouse_loader_1234_post_qc_review ] .
                 qq[-o $log_dir/warehouse_loader_1234_post_qc_review_] . $timestamp . 
-                qq[.out '$unset_string warehouse_loader --id_run 1234'];
+                qq[.out '$unset_string warehouse_loader --verbose --id_run 1234'];
   is($post_qc_review->_update_warehouse_command(50,'warehouse_loader', $unset_string),
     $expected, 'update warehouse command');
 
   $expected = q[bsub -q lowload 50 -J npg_runs2mlwarehouse_1234_post_qc_review ] .
              qq[-o $log_dir/npg_runs2mlwarehouse_1234_post_qc_review_] . $timestamp . 
-              q[.out 'npg_runs2mlwarehouse --id_run 1234'];
+              q[.out 'npg_runs2mlwarehouse --verbose --id_run 1234'];
   is($post_qc_review->_update_warehouse_command(50,'npg_runs2mlwarehouse'),
     $expected, 'update ml_warehouse command');
 
